mountall (2.5) UNRELEASED; urgency=low

  * conf/mounted-dev.conf:
    - Go back to copying from /lib/udev/devices, this is much faster for
      the devtmpfs case since almost all devices will already exist.
      LP: #507162.

 -- Scott James Remnant <scott@ubuntu.com>  Wed, 17 Feb 2010 11:09:08 +0000

mountall (2.4) lucid; urgency=low

  * conf/mountall-net.conf: only send SIGUSR1 to the main process, not to
    any pre-start or post-stop script we might have; killing the post-stop
    script with -USR1, though an unlikely race to hit, is definitely wrong.
    LP: #506902.

  [ Johan Kiviniemi ]
  * src/mountall.c: The mount table needs to exist for parse_filesystems
    - parse_filesystems() could call mount_proc(), which would call
      find_mount() and segfault.  LP: #503212.
  * src/mountall.c: Handle TAG_UNKNOWN.  LP: #505748.
  * src/mountall.c: Ensure boredom_timer is set to NULL when freeing
  * src/mountall.c: Default to no action for boredom query if prompt fails.
    LP: #505530.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Thu, 14 Jan 2010 05:30:13 -0800

mountall (2.3) lucid; urgency=low

  * conf/mounted-dev.conf: even with devtmpfs we need to make a few symlinks
    (/dev/fd, /dev/std{in,out,err})

 -- Scott James Remnant <scott@ubuntu.com>  Thu, 24 Dec 2009 02:35:35 +0000

mountall (2.2) lucid; urgency=low

  * Allow the "nobootwait" option for virtual devices too (which we
    ordinarily wait for all of).

 -- Scott James Remnant <scott@ubuntu.com>  Wed, 23 Dec 2009 03:59:45 +0000

mountall (2.1) lucid; urgency=low

  * Still having problems with the mount-point tagging that decides whether
    a given filesystem is virtual, local or remote.  Apply further fixes
    in an attempt to reduce problems:
    - don't use the prior fstab entry of virtual filesystems when the
      device spec matches the filesystem type (as well as "none")
    - inherit local and remote tags of device parents and prior fstab entries